feat: OAuth strict mode, populate helper, debug logging, tab reorder
P0 — OAuth token endpoint strict send mode:
- RequestBuilder forces urlencoded form body for token endpoints by default
- Adds oauth2_token_force_urlencoded (default true) and oauth2_token_allow_multipart
- Secondary fallback detection: auth.type==oauth2 + URL path contains /token
- Overrides imported multipart/form-data token bodies unless opted out

P1 — Populate OAuth2 from Selected Request:
- New OAuth2PopulateHelper extracts oauth2_* fields from auth/body/headers
- OAuth2Panel.populateFromOAuth2Map() updates UI safely on EDT
- ImporterPanel wires button and merges with Variables tab fallback

P0.5 — Raw request debug view/logging:
- New RequestDebugFormatter masks secrets (bearer, client_secret, password)
- Debug checkbox in Import and Runner config areas
- Logs to UI pane and api.logging().logToOutput()

P5 — Tab order update:
- New order: Import, Variables, OAuth2, Collection Runner
- sendToRunner() uses name-based tab lookup

README: execution model clarification + strict mode vars